# professional-programming-platform

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  FEATURES.md  LICENSE  README.md  TODO.md
docs/ai-prompts/: README.md  initializer.0.0.1-initial-setup.txt  initializer.meta.txt
src/ppp-js/: README.md  package.json
src/ppp-py/: README.md  pyproject.toml
src/ppp-py-js/frontend/: package.json
templates/: changelog-template.md
